--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^5.9.1",
     "@types/http-errors": "^2.0.4",
     "express": "^4.18.2",
+    "joi": "^17.12.1",
     "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
