--- a/package.json
+++ b/package.json
@@ -12,12 +12,18 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.9.1",
+    "@types/dotenv": "^8.2.0",
     "@types/http-errors": "^2.0.4",
+    "@types/jsonwebtoken": "^9.0.5",
+    "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.2",
     "express": "^4.18.2",
     "joi": "^17.12.1",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.17",
     "nodemon": "^3.0.3",
